.metadata/.plugins/org.eclipse.cdt.ui/assin8.build.log
13:36:40 **** Incremental Build of configuration Debug for project assin8 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/lcd.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/lcd.d" -MT"Core/Src/lcd.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/lcd.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/lcd.c:12:8: error: unknown type name 'I2C_HandleTypeDef'
   12 | extern I2C_HandleTypeDef hi2c1;
      |        ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:53:1: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'ADC_HandleTypeDef'?
   53 | I2C_HandleTypeDef hi2c1;
      | ^~~~~~~~~~~~~~~~~
      | ADC_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:128:9: warning: implicit declaration of function 'LCD_Init' [-Wimplicit-function-declaration]
  128 |         LCD_Init(LCD_ADDR);
      |         ^~~~~~~~
../Core/Src/lcd.c: In function 'I2C_Scan':
../Core/Src/lcd.c:23:15: warning: implicit declaration of function 'HAL_I2C_IsDeviceReady' [-Wimplicit-function-declaration]
   23 |         res = HAL_I2C_IsDeviceReady(&hi2c1, i << 1, 1, 10);
      |               ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/lcd.c:26:13: warning: implicit declaration of function 'snprintf' [-Wimplicit-function-declaration]
   26 |             snprintf(msg, sizeof(msg), "0x%02X", i);
      |             ^~~~~~~~
../Core/Src/lcd.c:3:1: note: include '<stdio.h>' or provide a declaration of 'snprintf'
    2 | #include <string.h>
  +++ |+#include <stdio.h>
    3 | 
../Core/Src/lcd.c:26:13: warning: incompatible implicit declaration of built-in function 'snprintf' [-Wbuiltin-declaration-mismatch]
   26 |             snprintf(msg, sizeof(msg), "0x%02X", i);
      |             ^~~~~~~~
../Core/Src/lcd.c:26:13: note: include '<stdio.h>' or provide a declaration of 'snprintf'
../Core/Src/main.c:145:9: warning: implicit declaration of function 'LCD_SendCommand' [-Wimplicit-function-declaration]
  145 |         LCD_SendCommand(LCD_ADDR, 0b10000000);
      |         ^~~~~~~~~~~~~~~
../Core/Src/lcd.c: In function 'LCD_SendInternal':
../Core/Src/lcd.c:53:11: warning: implicit declaration of function 'HAL_I2C_Master_Transmit' [-Wimplicit-function-declaration]
   53 |     res = HAL_I2C_Master_Transmit(&hi2c1, lcd_addr, data_arr, sizeof(data_arr), HAL_MAX_DELAY);
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:146:9: warning: implicit declaration of function 'LCD_SendString' [-Wimplicit-function-declaration]
  146 |         LCD_SendString(LCD_ADDR, uart_buf);
      |         ^~~~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_I2C1_Init':
../Core/Src/main.c:387:8: error: request for member 'Instance' in something not a structure or union
  387 |   hi2c1.Instance = I2C1;
      |        ^
../Core/Src/main.c:388:8: error: request for member 'Init' in something not a structure or union
  388 |   hi2c1.Init.ClockSpeed = 100000;
      |        ^
../Core/Src/main.c:389:8: error: request for member 'Init' in something not a structure or union
  389 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |        ^
make: *** [Core/Src/subdir.mk:37: Core/Src/lcd.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c:389:26: error: 'I2C_DUTYCYCLE_2' undeclared (first use in this function)
  389 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:389:26: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:390:8: error: request for member 'Init' in something not a structure or union
  390 |   hi2c1.Init.OwnAddress1 = 0;
      |        ^
../Core/Src/main.c:391:8: error: request for member 'Init' in something not a structure or union
  391 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |        ^
../Core/Src/main.c:391:31: error: 'I2C_ADDRESSINGMODE_7BIT' undeclared (first use in this function)
  391 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:392:8: error: request for member 'Init' in something not a structure or union
  392 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |        ^
../Core/Src/main.c:392:32: error: 'I2C_DUALADDRESS_DISABLE' undeclared (first use in this function); did you mean 'I2C_DUALADDRESS_DISABLED'?
  392 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_DUALADDRESS_DISABLED
../Core/Src/main.c:393:8: error: request for member 'Init' in something not a structure or union
  393 |   hi2c1.Init.OwnAddress2 = 0;
      |        ^
../Core/Src/main.c:394:8: error: request for member 'Init' in something not a structure or union
  394 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |        ^
../Core/Src/main.c:394:32: error: 'I2C_GENERALCALL_DISABLE' undeclared (first use in this function); did you mean 'I2C_GENERALCALL_DISABLED'?
  394 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_GENERALCALL_DISABLED
../Core/Src/main.c:395:8: error: request for member 'Init' in something not a structure or union
  395 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |        ^
../Core/Src/main.c:395:30: error: 'I2C_NOSTRETCH_DISABLE' undeclared (first use in this function); did you mean 'I2C_NOSTRETCH_DISABLED'?
  395 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |                              ^~~~~~~~~~~~~~~~~~~~~
      |                              I2C_NOSTRETCH_DISABLED
../Core/Src/main.c:396:7: warning: implicit declaration of function 'HAL_I2C_Init'; did you mean 'HAL_ADC_Init'? [-Wimplicit-function-declaration]
  396 |   if (HAL_I2C_Init(&hi2c1) != HAL_OK)
      |       ^~~~~~~~~~~~
      |       HAL_ADC_Init
../Core/Src/main.c:403:7: warning: implicit declaration of function 'HAL_I2CEx_ConfigAnalogFilter' [-Wimplicit-function-declaration]
  403 |   if (HAL_I2CEx_ConfigAnalogFilter(&hi2c1, I2C_ANALOGFILTER_ENABLE) != HAL_OK)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:403:44: error: 'I2C_ANALOGFILTER_ENABLE' undeclared (first use in this function); did you mean 'I2C_ANALOGFILTER_ENABLED'?
  403 |   if (HAL_I2CEx_ConfigAnalogFilter(&hi2c1, I2C_ANALOGFILTER_ENABLE) != HAL_OK)
      |                                            ^~~~~~~~~~~~~~~~~~~~~~~
      |                                            I2C_ANALOGFILTER_ENABLED
../Core/Src/main.c:410:7: warning: implicit declaration of function 'HAL_I2CEx_ConfigDigitalFilter' [-Wimplicit-function-declaration]
  410 |   if (HAL_I2CEx_ConfigDigitalFilter(&hi2c1, 0) != HAL_OK)
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:36:41 Build Failed. 20 errors, 10 warnings. (took 1s.126ms)

